--- a/Travel Forest/sass/_above_fold.scss
+++ b/Travel Forest/sass/_above_fold.scss
@@ -1,4 +1,5 @@
 
+
 $faint-white: rgba(255, 255, 255, .38);
 
 $visible-width: 6%;
@@ -6,7 +7,8 @@ $empty-width: 100 - $visible-width;
 $form-width: 70%;
 $bg-color: rgba(227, 227, 227, .08);
 
-#dimmed-bg{
+
+#dimmed-bg {
     height: 100vh;
     width: 100%;
     position: fixed;
@@ -14,12 +16,12 @@ $bg-color: rgba(227, 227, 227, .08);
     top: 0;
     left: 0;
     transition: all .6s;
-    transform: translateX(-120vw); 
+    transform: translateX(-120vw);
     visibility: hidden;
 }
 
 
-#full-site{
+#full-site {
     visibility: hidden;
     overflow: hidden;
     max-height: 100vh;
@@ -29,9 +31,11 @@ $bg-color: rgba(227, 227, 227, .08);
     left: 0;
 }
 
-#above-fold{
+
+#above-fold {
     position: relative;
-    color:white;
+    z-index: 12;
+    color: white;
     padding-left: 92px;
     padding-top: 62px;
     box-sizing: border-box;
@@ -40,102 +44,104 @@ $bg-color: rgba(227, 227, 227, .08);
     display: inline-block;
     opacity: 0;
     transition: all 1s .5s;
-     
-    nav{
+    
+    nav {
         display: inline-block;
         border-bottom: 1px solid $faint-white;
         padding-bottom: px-to-rem(18px);
         padding-right: px-to-rem(72px);
-
-        li{
+        
+        li {
             display: inline-block;
             padding: 0 px-to-rem(30px);
         }
-
-        li:first-child{padding-left: 0;}
-
-        a{
+        
+        li:first-child { padding-left: 0; }
+        
+        a {
             transition: opacity .1s;
-
-            &:hover{
+            
+            &:hover {
                 opacity: .8;
             }
+            
         }
     }
-
-    article{
+    
+    article {
         margin-top: px-to-rem(204px);
-
-        h1{
+        
+        h1 {
             font-size: px-to-rem(36px);
         }
-
-        p{
+        
+        p {
+            margin: px-to-rem(48px) 0;
             width: px-to-rem(640px);
             line-height: 200%;
-            margin: px-to-rem(48px) 0;
         }
-
-        button{
+        
+        button {
             background-color: #404040;
             color: #e8fff7;
             padding: .8em 1.4em;
-            padding-right: 16em; 
-            transition: all .2s;
-
-            &:hover{
+            padding-right: 16em;
+            transition: opacity .2s;
+            
+            &:hover {
                 opacity: .6;
             }
         }
+        
+        
+        
     }
-
     
-
 }
 
 
-#register-side-bar{
-
+#register-side-bar {
+    
     $side-bar-trans-time: .6s;
     $side-bar-trans-delay: 1s;
-
+    
     width: $empty-width + $visible-width + $form-width;
     display: flex;
     position: absolute;
     transition: all $side-bar-trans-time $side-bar-trans-delay;
     transform: translateX(200px);
-
-
-    #empty-section{
+    
+    
+    #empty-section {
         width: $empty-width;
         height: 100vh;
-
     }
-
-    #visible-section{
+    
+    #visible-section {
         width: $visible-width;
         height: 100vh;
         background-color: $bg-color;
         display: flex;
         flex-direction: column;
+        align-items: center;
         justify-content: flex-start;
-        color: #3b3b3b;
+        color: #b3b3b3;
         font-size: px-to-rem(18px);
         transition: opacity 1.4s;
-
-        span{
+        
+        span {
             writing-mode: vertical-rl;
             text-orientation: upright;
             margin: 8vh 0;
             transition: opacity .6s;
-
-            i{
+            
+            i {
                 font-size: px-to-rem(24px);
                 margin-bottom: px-to-rem(14px);
             }
         }
-
-        h4{
+        
+        h4 {
             writing-mode: vertical-rl;
             text-orientation: mixed;
             text-transform: uppercase;
@@ -143,29 +149,29 @@ $bg-color: rgba(227, 227, 227, .08);
             transition: opacity .6s;
         }
     }
-
-    #form-section{
+    
+    #form-section {
         background-color: $bg-color;
         height: 100vh;
         box-sizing: border-box;
         width: $form-width;
         color: white;
         padding-top: 30vh;
-
-        h2{
+        
+        h2 {
             font-size: px-to-rem(30px);
             margin-bottom: px-to-rem(52px);
         }
-
-        input:not([type="submit"]){
+        
+        input:not([type="submit"]) {
             display: block;
             background-color: transparent;
             border-bottom: 1px solid rgba(255, 255, 255, .8);
             margin: px-to-rem(50px) 0;
             padding: 6px 18px;
         }
-
-        input[type="submit"]{
+        
+        input[type="submit"] {
             background-color: white;
             color: #292929;
             padding: .4em 5.4em;
@@ -173,19 +179,18 @@ $bg-color: rgba(227, 227, 227, .08);
             margin-left: 8px;
             margin-bottom: px-to-rem(66px);
             transition: all .3s;
-
-            &:hover{
+            
+            &:hover {
                 opacity: .8;
                 transform: scale(1.1);
             }
         }
-
-        ::placeholder{ color: inherit;}
-
-        a{
+        
+        ::placeholder { color: inherit; }
+        
+        a {
             color: #b29dff;
-            &:hover{ opacity: .7;}
+            &:hover { opacity: .7; }
         }
     }
-
 }
