--- a/Travel Forest/stylesheets/main.css
+++ b/Travel Forest/stylesheets/main.css
@@ -20,6 +20,7 @@
 
 #above-fold {
   position: relative;
+  z-index: 12;
   color: white;
   padding-left: 92px;
   padding-top: 62px;
@@ -48,15 +49,15 @@
     #above-fold article h1 {
       font-size: 2.25rem; }
     #above-fold article p {
+      margin: 3rem 0;
       width: 40rem;
-      line-height: 200%;
-      margin: 3rem 0; }
+      line-height: 200%; }
     #above-fold article button {
       background-color: #404040;
       color: #e8fff7;
       padding: .8em 1.4em;
       padding-right: 16em;
-      transition: all .2s; }
+      transition: opacity .2s; }
       #above-fold article button:hover {
         opacity: .6; }
 
@@ -75,8 +76,9 @@
     background-color: rgba(227, 227, 227, 0.08);
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: flex-start;
-    color: #3b3b3b;
+    color: #b3b3b3;
     font-size: 1.125rem;
     transition: opacity 1.4s; }
     #register-side-bar #visible-section span {
@@ -126,6 +128,83 @@
       color: #b29dff; }
       #register-side-bar #form-section a:hover {
         opacity: .7; }
+
+#current-users {
+  width: 60%;
+  color: white;
+  margin: 12rem auto;
+  padding: 1.375rem 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.38);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.38); }
+  #current-users h4, #current-users h3 {
+    text-align: center; }
+  #current-users h4 {
+    font-size: 2.25rem; }
+  #current-users h3 {
+    font-size: 4.5rem;
+    margin-top: 0.75rem; }
+
+#footer {
+  color: white;
+  padding: 2.5rem 0;
+  background-color: rgba(13, 13, 13, 0.48);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  #footer h5 {
+    font-size: 1.875rem;
+    margin: 1.875rem 0; }
+  #footer hr {
+    width: 4%;
+    border: 1px solid rgba(255, 255, 255, 0.38);
+    border-top: none; }
+  #footer h6 {
+    font-size: 1rem;
+    margin: 0.5rem 0; }
+  #footer #social-icons {
+    padding: 0.75rem 0; }
+    #footer #social-icons img {
+      width: 2.25rem;
+      padding: 0 0.25rem;
+      transition: all .2s; }
+      #footer #social-icons img:hover {
+        transform: scale(1.2); }
+
+#info-section {
+  color: #cfcfcf;
+  margin: 5.125rem; }
+  #info-section article {
+    display: flex;
+    margin: 2rem;
+    align-items: center; }
+    #info-section article figure {
+      width: 48%;
+      height: 13.875rem;
+      background-size: cover;
+      background-position: center;
+      flex-shrink: 0;
+      transition: all .3s; }
+      #info-section article figure:hover {
+        transform: scale(1.05); }
+    #info-section article div {
+      margin-left: 5.125rem; }
+      #info-section article div h2 {
+        font-size: 1.875rem;
+        margin-bottom: 0.5rem; }
+      #info-section article div p {
+        font-size: 1rem;
+        width: 70%;
+        line-height: 220%; }
+  #info-section article:nth-of-type(1) figure {
+    background-image: url("../images/info-1.jpg"); }
+  #info-section article:nth-of-type(2) figure {
+    background-image: url("../images/info-2.jpg"); }
+  #info-section article:nth-of-type(3) figure {
+    background-image: url("../images/info-3.jpg"); }
+  #info-section article:nth-of-type(2) {
+    position: relative;
+    left: 60px; }
 
 @keyframes intro-content {
   0% {
@@ -182,6 +261,49 @@
     #landing button:hover {
       opacity: .8; }
 
+#locations {
+  margin: 7.5rem 0;
+  text-align: center;
+  color: white; }
+  #locations h2 {
+    font-size: 2.25rem;
+    text-transform: uppercase; }
+  #locations #header-link {
+    font-size: 1.75rem;
+    display: block;
+    color: #8a8a8a;
+    text-decoration: underline;
+    margin: 0.5rem 0 1.375rem; }
+    #locations #header-link:hover {
+      opacity: .7; }
+  #locations input {
+    background-color: transparent;
+    width: 18.75rem;
+    padding: 0 1.125rem 0.625rem;
+    display: block;
+    text-align: center;
+    margin: 4.5rem auto;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.38); }
+  #locations ::placeholder {
+    color: #d3d3d3; }
+  #locations h4 {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: 1px; }
+  #locations ul {
+    width: 60%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 1.125rem auto; }
+  #locations li {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 1.125rem;
+    list-style: none;
+    padding: 1.125rem 3.625rem; }
+    #locations li a {
+      cursor: pointer; }
+
 body, button, input {
   font-family: 'Questrial', sans-serif; }
 
@@ -208,3 +330,131 @@ a {
 
 p, a, button, input {
   font-size: 1.125rem; }
+
+#testimonials {
+  background-color: rgba(227, 227, 227, 0.08);
+  margin: 12.5rem 0;
+  position: relative;
+  height: 76vh; }
+  #testimonials::before, #testimonials::after {
+    content: "";
+    height: 12vh;
+    background-color: rgba(227, 227, 227, 0.08);
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;
+    border-right: 70vw solid white; }
+  #testimonials::before {
+    clip-path: polygon(0 100%, 100% 0, 100% 100%, 0 100%);
+    bottom: 100%; }
+  #testimonials::after {
+    clip-path: polygon(0 100%, 100% 0, 100% 0, 0 0);
+    top: 100%; }
+  #testimonials #testimonials-bg {
+    position: absolute;
+    width: 70vw;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background-color: white; }
+  #testimonials article {
+    position: relative;
+    z-index: 20;
+    padding: 6.75rem 0 4.75rem;
+    text-align: center; }
+    #testimonials article h2 {
+      text-transform: uppercase;
+      font-size: 2.25rem;
+      margin-bottom: 1.5rem; }
+    #testimonials article h5 {
+      font-size: 1.5rem; }
+      #testimonials article h5 span {
+        font-size: 2.25rem;
+        color: #0d77bb; }
+    #testimonials article #reviews {
+      display: flex;
+      color: white;
+      margin: 2rem 1.5rem; }
+      #testimonials article #reviews .review {
+        background-color: #0d77bb;
+        margin: 0 1.125rem;
+        padding: 1.5rem; }
+        #testimonials article #reviews .review .reviewer-details {
+          display: flex;
+          align-items: center; }
+          #testimonials article #reviews .review .reviewer-details figure {
+            border-radius: 50%;
+            background-size: cover;
+            height: 6.25rem;
+            width: 6.25rem; }
+          #testimonials article #reviews .review .reviewer-details .details {
+            margin-left: 1.125rem;
+            letter-spacing: 1px; }
+            #testimonials article #reviews .review .reviewer-details .details .name {
+              font-size: 1.125rem;
+              text-transform: uppercase;
+              margin-bottom: 0.375rem; }
+            #testimonials article #reviews .review .reviewer-details .details .from {
+              font-size: 0.875rem;
+              text-align: left; }
+        #testimonials article #reviews .review .reviewer-text {
+          font-size: 1rem;
+          margin-top: 0.875rem;
+          text-align: left;
+          line-height: 240%; }
+      #testimonials article #reviews .review:nth-of-type(1) figure {
+        background-image: url("../images/face-1.jpg"); }
+      #testimonials article #reviews .review:nth-of-type(2) figure {
+        background-image: url("../images/face-2.jpg"); }
+      #testimonials article #reviews .review:nth-of-type(3) figure {
+        background-image: url("../images/face-3.jpg"); }
+      #testimonials article #reviews .review:nth-of-type(2) {
+        background-color: #184a6a; }
+    #testimonials article a {
+      display: block;
+      text-align: center;
+      color: #0d77bb;
+      margin-top: 0.5rem; }
+      #testimonials article a:hover {
+        opacity: .7; }
+
+#weekly-deal {
+  margin: 7.5rem 0;
+  color: white; }
+  #weekly-deal h2 {
+    background-color: rgba(13, 13, 13, 0.52);
+    font-size: 2.25rem;
+    width: max-content;
+    padding: 2.625rem;
+    padding-left: 21.25rem;
+    padding-right: 10rem;
+    margin-bottom: 0.625rem; }
+  #weekly-deal #deal {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; }
+    #weekly-deal #deal #deal-details {
+      width: 30%;
+      padding-left: 11.25rem; }
+      #weekly-deal #deal #deal-details h3 {
+        font-size: 2.25rem; }
+      #weekly-deal #deal #deal-details p {
+        font-size: 1rem;
+        line-height: 180%;
+        margin: 1.25rem 0 2rem; }
+      #weekly-deal #deal #deal-details a {
+        text-decoration: underline; }
+        #weekly-deal #deal #deal-details a:hover {
+          opacity: .6; }
+    #weekly-deal #deal figure {
+      background-image: url("../images/greece.jpg");
+      background-size: cover;
+      height: 576px;
+      width: 44%;
+      box-shadow: -4px 4px 14px 3px rgba(80, 80, 80, 0.44);
+      transition: all .5s; }
+      #weekly-deal #deal figure:hover {
+        transform: scale(1.06); }
+
+:root {
+  font-size: 14px; }
